--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <header>
         <nav class="navbar">
             <img src="IMAGENES\logo_rediseño.png" alt="Moncherri Bakery" class="logo"> <br>
+            
+            <input type="checkbox" id="menu-toogle" class="menu-toogle">
+            <label for="menu-toogle" class="menu-icon">&#9776;</label>
 
             <ul class="navlinks">
                 <li><a href="">Home</a></li>
@@ -23,7 +26,7 @@
         </nav>
     </header>
 
-    <div class="banner">
+    <div class="banner-top">
         <img src="IMAGENES/banner-homepage2.jpg" alt="Banner">
     </div> <br> <br>
 
@@ -122,7 +125,7 @@
         </section>        
     </section>
 
-    <div class="banner">
+    <div class="banner-bottom">
         <img src="IMAGENES/banner-homepage3.jpg" alt="Banner 3">
     </div>
 
@@ -153,7 +156,6 @@
                 <a href=""><li>Merch</li></a> <br>
             </ul>
         </div>
-                
     </section>
 </footer>
 
