Added customized fonts, fixed spaces in footer, and added two buttons with icons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="ESTILOS/estilo.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Emilys+Candy&family=Henny+Penny&display=swap" rel="stylesheet">
+
     <link rel="shortcut icon" href="IMAGENES/logo_cortado.jpg" type="image/x-icon">
     <title>Moncherri Bakery</title>
 </head>
@@ -61,65 +66,153 @@
             <div class="producto">
                 <img src="IMAGENES/producto1.jpg" alt="Producto1">
                 <p class="productoNombre">Producto1</p><br>
-                <p class="precio_promocion" style="visibility: visible;">$3</p>
-                <p class="precio" style="text-decoration: ;">$5</p><br>
-                <a href=""><button>Ordenar</button></a> 
+                <p class="precio_promocion" style="visibility: visible;"> 3</p>
+                <p class="precio" style="text-decoration: line-through;"> 5</p><br>
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
+                        Ordenar
+                    </button>
+                </a> 
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/email.png" alt="Email" id="imgButton">
+                        Cotizar
+                    </button>
+                </a>
             </div>
 
             <div class="producto">
                 <img src="IMAGENES/producto2.jpg" alt="Producto1">
                 <p class="productoNombre">Producto2</p><br>
-                <p class="precio_promocion" style="visibility: hidden;">$5</p>
-                <p class="precio" style="text-decoration: ;">$7</p><br>
-                <a href=""><button>Ordenar</button></a>
+                <p class="precio_promocion" style="visibility: hidden;"> 5</p>
+                <p class="precio" style="text-decoration: ;"> 7</p><br>
+<a href="">
+                    <button>
+                        <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
+                        Ordenar
+                    </button>
+                </a> 
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/email.png" alt="Email" id="imgButton">
+                        Cotizar
+                    </button>
+                </a>
             </div>
 
             <div class="producto">
                 <img src="IMAGENES/producto3.jpg" alt="Producto1">
                 <p class="productoNombre">Producto3</p><br>
-                <p class="precio_promocion" style="visibility: visible;">$6</p>
-                <p class="precio" style="text-decoration: line-through;">$8</p><br>
-                <a href=""><button>Ordenar</button></a>
+                <p class="precio_promocion" style="visibility: visible;"> 6</p>
+                <p class="precio" style="text-decoration: line-through;"> 8</p><br>
+<a href="">
+                    <button>
+                        <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
+                        Ordenar
+                    </button>
+                </a> 
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/email.png" alt="Email" id="imgButton">
+                        Cotizar
+                    </button>
+                </a>
             </div>
 
             <div class="producto">
                 <img src="IMAGENES/producto1.jpg" alt="Producto1">
                 <p class="productoNombre">Producto1</p><br>
-                <p class="precio_promocion" style="visibility: visible;">$3</p>
-                <p class="precio" style="text-decoration: line-through;">$5</p><br>
-                <a href=""><button>Ordenar</button></a> 
+                <p class="precio_promocion" style="visibility: visible;"> 3</p>
+                <p class="precio" style="text-decoration: line-through;"> 5</p><br>
+<a href="">
+                    <button>
+                        <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
+                        Ordenar
+                    </button>
+                </a> 
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/email.png" alt="Email" id="imgButton">
+                        Cotizar
+                    </button>
+                </a>
             </div>
 
             <div class="producto">
                 <img src="IMAGENES/producto2.jpg" alt="Producto1">
                 <p class="productoNombre">Producto2</p><br>
-                <p class="precio_promocion" style="visibility: visible;">$5</p>
-                <p class="precio" style="text-decoration: line-through;">$7</p><br>
-                <a href=""><button>Ordenar</button></a>
+                <p class="precio_promocion" style="visibility: visible;"> 5</p>
+                <p class="precio" style="text-decoration: line-through;"> 7</p><br>
+<a href="">
+                    <button>
+                        <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
+                        Ordenar
+                    </button>
+                </a> 
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/email.png" alt="Email" id="imgButton">
+                        Cotizar
+                    </button>
+                </a>
             </div>
 
             <div class="producto">
                 <img src="IMAGENES/producto3.jpg" alt="Producto1">
                 <p class="productoNombre">Producto3</p><br>
-                <p class="precio_promocion" style="visibility: visible;">$6</p>
-                <p class="precio" style="text-decoration: line-through;">$8</p><br>
-                <a href=""><button>Ordenar</button></a>
+                <p class="precio_promocion" style="visibility: visible;"> 6</p>
+                <p class="precio" style="text-decoration: line-through;"> 8</p><br>
+<a href="">
+                    <button>
+                        <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
+                        Ordenar
+                    </button>
+                </a> 
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/email.png" alt="Email" id="imgButton">
+                        Cotizar
+                    </button>
+                </a>
             </div>
 
             <div class="producto">
                 <img src="IMAGENES/producto1.jpg" alt="Producto1">
                 <p class="productoNombre">Producto1</p><br>
-                <p class="precio_promocion" style="visibility: visible;">$3</p>
-                <p class="precio" style="text-decoration: line-through;">$5</p><br>
-                <a href=""><button>Ordenar</button></a> 
+                <p class="precio_promocion" style="visibility: visible;"> 3</p>
+                <p class="precio" style="text-decoration: line-through;"> 5</p><br>
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
+                        Ordenar
+                    </button>
+                </a> 
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/email.png" alt="Email" id="imgButton">
+                        Cotizar
+                    </button>
+                </a>
             </div>
 
             <div class="producto">
                 <img src="IMAGENES/producto2.jpg" alt="Producto1">
                 <p class="productoNombre">Producto2</p><br>
-                <p class="precio_promocion" style="visibility: visible;">$5</p>
-                <p class="precio" style="text-decoration: line-through;">$7</p><br>
-                <a href=""><button>Ordenar</button></a>
+                <p class="precio_promocion" style="visibility: visible;"> 5</p>
+                <p class="precio" style="text-decoration: line-through;"> 7</p><br>
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
+                        Ordenar
+                    </button>
+                </a> 
+                <a href="">
+                    <button>
+                        <img src="IMAGENES/email.png" alt="Email" id="imgButton">
+                        Cotizar
+                    </button>
+                </a>
             </div>
 
         </section>        
@@ -141,9 +234,10 @@
         <div class="footerInfo2">
             <h2 style="color: #4b2c2c;">Acerca de: </h2><br><br>
             <ul>
-                <a href=""><li>Historia</li></a><br><br>
-                <a href=""><li>Testimonios</li></a> <br><br>
-                <a href=""><li>Menu</li></a>
+                <a href=""><li>Historia</li></a> <br>
+                <a href=""><li>Testimonios</li></a> <br>
+                <a href=""><li>Menu de postres</li></a><br>
+                <a href=""><li>Menu salado</li></a>
             </ul>
         </div>
         
