added colors to the salty menu, created a template that I will use for every product on both categories, and added pictures for both templates

--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
                     </div>
                     
                     <div class="producto">
-                        <img src="IMAGENES/producto1.jpg" alt="Producto1">
-                        <p class="productoNombre">Producto1</p><br>
-                        <p class="precio_promocion" style="visibility: visible;"> 3</p>
-                        <p class="precio" style="text-decoration: line-through;"> 5</p><br>
+                        <a href="productoPostre_Plantilla.html" style="text-decoration: none;">
+                            <img src="IMAGENES/producto1.jpg" alt="Producto1">
+                            <p class="productoNombre">Producto1</p><br>
+                            <p class="precio_promocion" style="visibility: visible;"> 3</p>
+                            <p class="precio" style="text-decoration: line-through;"> 5</p><br>
+                        </a>
                         <a href="https://wa.me/50373495217?text=Hola%20quiero%20ordenar%20el%20brownie%20clásico" target="_blank">
                             <button>
                                 <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
@@ -287,10 +289,12 @@
                     </div>
 
                     <div class="producto">
-                        <img src="IMAGENES/platoSalado1 cuadrado.jpg" alt="Producto1">
-                        <p class="productoNombreSalado">Producto1</p><br>
-                        <p class="precio_promocion" style="visibility: visible;"> 3</p>
-                        <p class="precio" style="text-decoration: line-through;"> 5</p><br>
+                        <a href="productoSalado_Plantilla.html" style="text-decoration: none;">
+                            <img src="IMAGENES/platoSalado1 cuadrado.jpg" alt="Producto1">
+                            <p class="productoNombreSalado">Producto1</p><br>
+                            <p class="precio_promocion" style="visibility: visible;"> 3</p>
+                            <p class="precio" style="text-decoration: line-through;"> 5</p><br>
+                        </a>
                         <a href="">
                             <button id="buttonSalado">
                                 <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
