--- a/menuPostres.html
+++ b/menuPostres.html
@@ -11,7 +11,7 @@
 
     <link rel="shortcut icon" href="IMAGENES/logo_cortado.jpg" type="image/x-icon">
 
-    <title>Moncherri Bakery</title>
+    <title>Menu de postres - Moncherri Bakery</title>
 </head>
 <body>
 
@@ -51,10 +51,12 @@
                     </div>
                     
                     <div class="producto">
-                        <img src="IMAGENES/producto1.jpg" alt="Producto1">
-                        <p class="productoNombre">Producto1</p><br>
-                        <p class="precio_promocion" style="visibility: visible;"> 3</p>
-                        <p class="precio" style="text-decoration: line-through;"> 5</p><br>
+                        <a href="productoPostre_Plantilla.html">
+                            <img src="IMAGENES/producto1.jpg" alt="Producto1">
+                            <p class="productoNombre">Producto1</p><br>
+                            <p class="precio_promocion" style="visibility: visible;"> 3</p>
+                            <p class="precio" style="text-decoration: line-through;"> 5</p><br>
+                        </a>
                         <a href="https://wa.me/50373495217?text=Hola%20quiero%20ordenar%20el%20brownie%20clásico" target="_blank">
                             <button>
                                 <img src="IMAGENES/whatsapp.png" alt="whatsapp logo" id="imgButton">
