Added sauces with a new color palette

--- a/menuPostres.html
+++ b/menuPostres.html
@@ -52,7 +52,7 @@
                     
                     <div class="producto">
                         <a href="productoPostre_Plantilla.html">
-                            <img src="IMAGENES/producto1.jpg" alt="Producto1">
+                            <img src="IMAGENES/MenuPostres/producto1.jpg" alt="Producto1">
                             <p class="productoNombre">Producto1</p><br>
                             <p class="precio_promocion" style="visibility: visible;"> 3</p>
                             <p class="precio" style="text-decoration: line-through;"> 5</p><br>
@@ -72,7 +72,7 @@
                     </div>
 
                     <div class="producto">
-                        <img src="IMAGENES/producto2.jpg" alt="Producto1">
+                        <img src="IMAGENES/MenuPostres/producto2.jpg" alt="Producto1">
                         <p class="productoNombre">Producto2</p><br>
                         <p class="precio_promocion" style="visibility: hidden;"> 5</p>
                         <p class="precio" style="text-decoration: ;"> 7</p><br>
@@ -91,7 +91,7 @@
                     </div>
 
                     <div class="producto">
-                        <img src="IMAGENES/producto3.jpg" alt="Producto1">
+                        <img src="IMAGENES/MenuPostres/producto3.jpg" alt="Producto1">
                         <p class="productoNombre">Producto3</p><br>
                         <p class="precio_promocion" style="visibility: visible;"> 6</p>
                         <p class="precio" style="text-decoration: line-through;"> 8</p><br>
@@ -110,7 +110,7 @@
                     </div>
 
                     <div class="producto">
-                        <img src="IMAGENES/producto1.jpg" alt="Producto1">
+                        <img src="IMAGENES/MenuPostres/producto1.jpg" alt="Producto1">
                         <p class="productoNombre">Producto1</p><br>
                         <p class="precio_promocion" style="visibility: visible;"> 3</p>
                         <p class="precio" style="text-decoration: line-through;"> 5</p><br>
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="producto">
-                        <img src="IMAGENES/producto2.jpg" alt="Producto1">
+                        <img src="IMAGENES/MenuPostres/producto2.jpg" alt="Producto1">
                         <p class="productoNombre">Producto2</p><br>
                         <p class="precio_promocion" style="visibility: visible;"> 5</p>
                         <p class="precio" style="text-decoration: line-through;"> 7</p><br>
@@ -148,7 +148,7 @@
                     </div>
 
                     <div class="producto">
-                        <img src="IMAGENES/producto3.jpg" alt="Producto1">
+                        <img src="IMAGENES/MenuPostres/producto3.jpg" alt="Producto1">
                         <p class="productoNombre">Producto3</p><br>
                         <p class="precio_promocion" style="visibility: visible;"> 6</p>
                         <p class="precio" style="text-decoration: line-through;"> 8</p><br>
@@ -167,7 +167,7 @@
                     </div>
 
                     <div class="producto">
-                        <img src="IMAGENES/producto1.jpg" alt="Producto1">
+                        <img src="IMAGENES/MenuPostres/producto1.jpg" alt="Producto1">
                         <p class="productoNombre">Producto1</p><br>
                         <p class="precio_promocion" style="visibility: visible;"> 3</p>
                         <p class="precio" style="text-decoration: line-through;"> 5</p><br>
@@ -186,7 +186,7 @@
                     </div>
 
                     <div class="producto">
-                        <img src="IMAGENES/producto2.jpg" alt="Producto1">
+                        <img src="IMAGENES/MenuPostres/producto2.jpg" alt="Producto1">
                         <p class="productoNombre">Producto2</p><br>
                         <p class="precio_promocion" style="visibility: visible;"> 5</p>
                         <p class="precio" style="text-decoration: line-through;"> 7</p><br>
@@ -205,7 +205,7 @@
                     </div>
 
                     <div class="producto">
-                        <img src="IMAGENES/producto3.jpg" alt="Producto3">
+                        <img src="IMAGENES/MenuPostres/producto3.jpg" alt="Producto3">
                         <p class="productoNombre">Producto3</p><br>
                         <p class="precio_promocion" style="visibility: visible;"> 3</p>
                         <p class="precio" style="text-decoration: line-through;"> 5</p><br>
@@ -224,7 +224,7 @@
                     </div>
 
                     <div class="producto">
-                        <img src="IMAGENES/producto1.jpg" alt="Producto1">
+                        <img src="IMAGENES/MenuPostres/producto1.jpg" alt="Producto1">
                         <p class="productoNombre">Producto1</p><br>
                         <p class="precio_promocion" style="visibility: visible;"> 5</p>
                         <p class="precio" style="text-decoration: line-through;"> 7</p><br>
